@@ -1,5 +1,6 @@
     ADDED: directory synchronizer
     ADDED: file splitter
+    FIXED: no i18n for Name, Ext, Size, Modified
     FIXED: obsolete QT header files
     FIXED: crash at closing the progressbar window at packing
     FIXED: no or uninformative error message at packing to a readonly directory
